--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,13 @@
   <title>BestOfGlass</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%= yield %>
+
 
 </body>
 </html>
