--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="field">
-    <%= f.date_select "date_of_birth", { start_year: 100.years.ago.year, end_year: Date.today.year, include_blank: true, :default => nil} %>
+    <%= f.date_select :date_of_birth, {order: [:month, :day, :year], prompt: { day: 'Select day', month: 'Select month'}, start_year: Date.today.year - 18, end_year: Date.today.year - 100}, {required: true} %>
   </div>
 
   <div class="actions">
